# flask-example-basic

./: .dockerignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.yml  env-example  pyproject.toml  run.sh
.github/workflows/: docker.yaml
example_service/: __init__.py  processors.py  service.py  version.py
services/: main.tf  variables.tf
