[tool.poetry]
name = "flask-example-basic"
version = "0.2.0"
description = "Flask application using Sentry (Example)"
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sentry-sdk = {extras = ["flask"], version = "^1.5.11"}
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
